--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -3,10 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/sliderViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/viewFadingEdge"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/bg_fading_edge"
+        app:layout_constraintBottom_toBottomOf="@id/sliderViewPager" />
+
+    <LinearLayout
+        android:id="@+id/layoutIndicators"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="hi"/>
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/viewFadingEdge"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </FrameLayout>
