--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:title="Home"
+        android:icon="@drawable/ic_baseline_home_24"
+        android:id="@+id/home"/>
     <item android:title="Phone number"
         android:icon="@drawable/ic_baseline_phone_24"
         android:id="@+id/phone_number"/>
@@ -10,4 +13,5 @@
     <item android:title="Call by Image"
         android:icon="@drawable/ic_baseline_grade_24"
         android:id="@+id/call_by_image"/>
+
 </menu>
