--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -8,13 +8,31 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/searchEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="SEARCH"/>
+
+
+    </LinearLayout>
+
     <ExpandableListView
         android:id="@+id/expandablelistView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"
-        android:groupIndicator="@null"/>
+        android:groupIndicator="@null" />
 
     </LinearLayout>
 
