--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -8,25 +8,14 @@
     tools:context=".StartScreen">
 
     <TextView
-        android:id="@+id/app_name"
+        android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
-        android:text="Call by Image !"
+        android:text="Loading..."
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/app_explanation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:layout_centerHorizontal="true"
-        android:text="You know nothing but the profile image"
-        android:textColor="@color/white"
-        android:textSize="20dp"
         android:textStyle="bold" />
 
     <com.airbnb.lottie.LottieAnimationView
