--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -17,7 +17,7 @@
         android:background="@drawable/person"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
@@ -38,8 +38,9 @@
             android:text="num"
             android:textSize="20dp"
             android:textStyle="bold" />
-
     </LinearLayout>
 
 
+
 </LinearLayout>
+
