--- a/app/src/main/res/layout/childlistview.xml
+++ b/app/src/main/res/layout/childlistview.xml
@@ -7,13 +7,18 @@
     android:layout_gravity="center"
     android:gravity="center">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/callButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circlebutton"
         android:backgroundTint="#D2F1D3"
@@ -24,6 +29,26 @@
         android:textAlignment="center"
         android:textSize="15sp"
         android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/mapButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/circlebutton"
+        android:backgroundTint="#FFDAA3"
+        android:drawableTop="@drawable/map"
+        android:paddingTop="10dp"
+        android:drawablePadding="-10dp"
+        android:text="MAP"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/foodTextView"
