convert fragment1 to fragment3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,13 @@
 
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/missingText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="text"
+        tools:ignore="MissingConstraints" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
