--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -7,14 +7,17 @@
     android:layout_margin="50dp"
     android:layout_marginBottom="30dp">
 
-    <ImageView
-        android:id="@+id/phoneImage"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/restaurantImageView"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/restaurant"/>
+        android:background="@android:color/transparent"
+        android:src="@drawable/img11"
+        />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,17 +30,21 @@
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="name"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/numTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="num"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
     </LinearLayout>
 
 
