--- a/app/src/main/res/layout/childlistview.xml
+++ b/app/src/main/res/layout/childlistview.xml
@@ -23,8 +23,8 @@
         android:background="@drawable/circlebutton"
         android:backgroundTint="#D2F1D3"
         android:drawableTop="@drawable/call"
-        android:paddingTop="10dp"
-        android:drawablePadding="-10dp"
+        android:fontFamily="@font/gmarketsansttflght"
+        android:paddingTop="15dp"
         android:text="Call"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -41,8 +41,8 @@
         android:background="@drawable/circlebutton"
         android:backgroundTint="#FFDAA3"
         android:drawableTop="@drawable/map"
-        android:paddingTop="10dp"
-        android:drawablePadding="-10dp"
+        android:fontFamily="@font/gmarketsansttflght"
+        android:paddingTop="15dp"
         android:text="MAP"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -59,6 +59,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/gmarketsansttflght"
         android:textSize="13sp"
         android:layout_marginBottom="5dp"/>
 
@@ -67,6 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="운영시간 : 10:00 ~ 21:00"
+        android:fontFamily="@font/gmarketsansttflght"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="13sp"
@@ -77,6 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="평점: 4.4"
+        android:fontFamily="@font/gmarketsansttflght"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="13sp"
@@ -87,6 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="평균 5,000원"
+        android:fontFamily="@font/gmarketsansttflght"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/black"
