--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -7,6 +7,7 @@
         android:id="@+id/recyclerView"
         android:layout_margin="2dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/gmarketsansttflght"/>
 
 </FrameLayout>
