--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/searchButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gmarketsansttfmedium"
                 android:text="Search"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"/>
@@ -57,6 +58,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="20dp"
+            android:fontFamily="@font/gmarketsansttflght"
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:visibility="gone"
@@ -92,6 +94,18 @@
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#C3C3C3"
                         android:drawableTop="@drawable/close"
+                        android:fontFamily="@font/gmarketsansttfmedium"
+                        android:paddingTop="3dp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/sendButton"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="end"
+                        android:background="@drawable/circlebutton"
+                        android:fontFamily="@font/gmarketsansttfmedium"
+                        android:backgroundTint="#C3C3C3"
+                        android:drawableTop="@drawable/close"
                         android:paddingTop="3dp" />
 
                 </FrameLayout>
@@ -123,8 +137,9 @@
                             android:gravity="center"
                             android:text="이름"
                             android:textStyle="bold"
+                            android:fontFamily="@font/gmarketsansttfmedium"
                             android:textSize="16sp"
-                            android:textColor="@color/black"/>
+                            android:textColor="#A91D37"/>
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/addressCard"
@@ -132,6 +147,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="1dp"
+                            android:fontFamily="@font/gmarketsansttflght"
                             android:text="주소"
                             android:textStyle="bold" />
 
@@ -142,6 +158,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:fontFamily="@font/gmarketsansttflght"
                             android:text="소개"
                             android:textStyle="bold" />
                     </LinearLayout>
