--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/gmarketsansttfbold"
             android:text="name"
             android:textSize="20dp"
             android:textStyle="bold"
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/gmarketsansttflght"
             android:text="num"
             android:textSize="15dp"
             android:textStyle="bold"
