--- a/app/src/main/res/layout/restaurant_item_list.xml
+++ b/app/src/main/res/layout/restaurant_item_list.xml
@@ -53,6 +53,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
+                android:fontFamily="@font/gmarketsansttfbold"
+                android:textColor="#A91D37"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -60,6 +62,7 @@
                 android:id="@+id/restaurant_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gmarketsansttflght"
                 android:layout_margin="10dp" />
 
         </LinearLayout>
