--- a/app/src/main/res/layout/childlistview.xml
+++ b/app/src/main/res/layout/childlistview.xml
@@ -23,9 +23,10 @@
         android:background="@drawable/circlebutton"
         android:backgroundTint="#D2F1D3"
         android:drawableTop="@drawable/call"
-        android:fontFamily="@font/gmarketsansttflght"
-        android:paddingTop="15dp"
-        android:text="Call"
+        android:fontFamily="@font/gmarketsansttfmedium"
+        android:paddingTop="13dp"
+        android:drawablePadding="3dp"
+        android:text="CALL"
         android:textAlignment="center"
         android:textSize="15sp"
         android:textStyle="bold" />
@@ -41,8 +42,9 @@
         android:background="@drawable/circlebutton"
         android:backgroundTint="#FFDAA3"
         android:drawableTop="@drawable/map"
-        android:fontFamily="@font/gmarketsansttflght"
-        android:paddingTop="15dp"
+        android:fontFamily="@font/gmarketsansttfmedium"
+        android:paddingTop="13dp"
+        android:drawablePadding="3dp"
         android:text="MAP"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -60,7 +62,7 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:fontFamily="@font/gmarketsansttflght"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:layout_marginBottom="5dp"/>
 
     <TextView
@@ -71,7 +73,7 @@
         android:fontFamily="@font/gmarketsansttflght"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:textColor="@color/black"/>
 
     <TextView
@@ -82,7 +84,7 @@
         android:fontFamily="@font/gmarketsansttflght"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:textColor="@color/black"/>
 
     <TextView
@@ -94,7 +96,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="13sp"
+        android:textSize="14sp"
         android:layout_marginBottom="20dp"/>
 
 
