--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:hint="Search"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp">
                 <com.google.android.material.textfield.TextInputEditText
@@ -135,6 +135,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:gravity="center"
+                            android:layout_marginTop="3dp"
                             android:text="이름"
                             android:textStyle="bold"
                             android:fontFamily="@font/gmarketsansttfmedium"
@@ -143,10 +144,11 @@
 
                         <androidx.appcompat.widget.AppCompatTextView
                             android:id="@+id/addressCard"
-                            android:layout_marginStart="10dp"
+                            android:layout_marginStart="13dp"
+                            android:layout_marginTop="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="1dp"
+                            android:textSize="13sp"
                             android:fontFamily="@font/gmarketsansttflght"
                             android:text="주소"
                             android:textStyle="bold" />
@@ -158,8 +160,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
                             android:fontFamily="@font/gmarketsansttflght"
                             android:text="소개"
+                            android:textSize="13sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
