--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -28,6 +28,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/gmarketsansttflght"
             android:hint="SEARCH"/>
 
     </LinearLayout>
