--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -14,12 +14,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/searchImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/search"/>
+
             <EditText
                 android:id="@+id/searchEditText"
-                android:layout_width="250dp"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="23dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="25dp"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/gmarketsansttflght"
                 android:hint="SEARCH"/>
@@ -31,7 +39,8 @@
                 android:fontFamily="@font/gmarketsansttfmedium"
                 android:text="Search"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"/>
 
         </LinearLayout>
 
@@ -159,7 +168,7 @@
                             android:layout_marginBottom="5dp"
                             android:fontFamily="@font/gmarketsansttflght"
                             android:text="소개"
-                            android:textSize="13sp"
+                            android:textSize="12sp"
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
