convert fragment2 -> fragment3

--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -63,7 +63,9 @@
                     android:textAlignment="center">
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
-                            android:layout_height="100dp" />
+                            android:layout_height="100dp"
+
+                            android:background="@drawable/allborder"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
 
