--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,28 +16,25 @@
         android:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/myToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            android:id="@+id/myToolBar"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:gravity="center"
+            android:minHeight="?attr/actionBarSize">
 
-            <RelativeLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/gmarketsansttflght"
-                    android:gravity="center"
-                    android:letterSpacing="0.1"
-                    android:text="카슐랭 가이드"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/gmarketsansttflght"
+                android:gravity="center"
+                android:letterSpacing="0.1"
+                android:text="카슐랭 가이드"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
         </androidx.appcompat.widget.Toolbar>
 
