--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -49,6 +49,23 @@
             android:textColor="@color/black" />
     </LinearLayout>
 
+    <!--
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"/>
+
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="3"
+        android:rating="3"
+        android:layout_gravity="center"
+        android:layout_marginStart="10dp"
+        android:isIndicator="true"/>  -->
 
 
 </LinearLayout>
