--- a/app/src/main/res/layout/fragment3.xml
+++ b/app/src/main/res/layout/fragment3.xml
@@ -46,14 +46,16 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
 
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -97,7 +99,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:background="@drawable/circlebutton"
-                        android:backgroundTint="#C3C3C3"
+                        android:backgroundTint="#A91D37"
                         android:drawableTop="@drawable/close"
                         android:fontFamily="@font/gmarketsansttfmedium"
                         android:paddingTop="3dp" />
@@ -109,7 +111,7 @@
                         android:layout_gravity="end"
                         android:background="@drawable/circlebutton"
                         android:fontFamily="@font/gmarketsansttfmedium"
-                        android:backgroundTint="#C3C3C3"
+                        android:backgroundTint="#A91D37"
                         android:drawableTop="@drawable/share"
                         android:paddingTop="3dp" />
 
